test/org/midica/testfiles/failing/eff-flow-numeric-for-none.midica
INCLUDE inc/instruments.midica


0: ctrl=123.wait.set(12)
